--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -11,7 +11,7 @@
         android:id="@+id/messageLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bubble_incoming"
+        android:background="@drawable/mensaje_bot"
         android:orientation="horizontal"
         android:padding="8dp">
 
@@ -19,10 +19,8 @@
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@android:color/black"
             android:textSize="16sp"
-            tools:text="¡Hola!" />
+            tools:text="prueba " />
 
         <TextView
             android:id="@+id/tvTime"
@@ -33,7 +31,7 @@
             android:gravity="bottom"
             android:textSize="12sp"
             android:textStyle="italic"
-            tools:text="13:20 PM" />
+            tools:text="hora prueba" />
     </LinearLayout>
 
 </LinearLayout>
